--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gabrieltorreiro/SimpleWeatherApp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gabriel Torreiro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Gabrieltorreiro/SimpleWeatherApp/issues"
